# socket_multiplexer

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  main.cc  socket.cc  socket.h  socket_multiplexer.cc  socket_utils.cc
m4/: .gitignore
scripts/: bootstrap.sh
src/: Makefile.am  logger.cc  logger.cpp  logger.h  logger.hpp  main.cc  main.cpp  socket_multiplexer.cc  socket_multiplexer.cpp  socket_multiplexer.h  socket_utils.cc  socket_utils.cpp  socket_utils.h  socket_utils.hpp
sysconfig/: socket_multiplexer.in
systemd/: socket_multiplexer.service.in  socket_multiplexer@.service.in
