bin_PROGRAMS= socket_multiplexer

AM_CXXFLAGS= -Wall -Wextra -Weffc++ -Wno-missing-field-initializers

socket_multiplexer_SOURCES = \
  main.cpp \
  logger.cpp \
  logger.hpp \
  socket_multiplexer.cpp \
  socket_multiplexer.hpp \
  socket_utils.cpp \
  socket_utils.hpp
socket_multiplexer_CPPFLAGS= \
  -I$(top_srcdir)/src
